--- a/css/productos.css
+++ b/css/productos.css
@@ -132,3 +132,88 @@ footer {
 .subscribe form button {
     margin-bottom: 10px;
 }
+
+.subscribe input[type="email"] {
+    width: 100%;
+    padding: 10px;
+    border: none;
+    border-radius: 4px;
+    margin-right: 10px;
+}
+
+.subscribe button {
+    background-color: #fff;
+    color: black;
+    border: none;
+    border-radius: 4px;
+    padding: 10px 20px;
+    cursor: pointer;
+}
+
+.subscribe button:hover {
+    background-color: #952323;
+}
+
+/* ESTILOS PARA LOS BOTONES DE REDES */
+.social {
+    text-align: center;
+}
+
+.social-icons {
+    list-style: none;
+    padding: 0;
+    display: flex;
+    justify-content: center;
+}
+
+.social-link {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    text-decoration: none;
+    margin: 0 20px; /* Ajusta el espacio horizontal entre elementos */
+    transition: background-color 0.3s, color 0.3s; /* Transición para el color de fondo y el color del texto */
+    padding: 10px; /* Espaciado interno para hacer que el área de clic sea más grande */
+    border-radius: 50%; /* Hace que los botones sean redondos */
+    width: 50px; /* Define el ancho y alto de los botones redondos */
+    height: 50px;
+    background-color: #fff; /* Fondo blanco por defecto */
+    color: #000; /* Color de texto negro por defecto */
+    justify-content: center;
+}
+
+/* Estilos de color para íconos de redes sociales */
+.facebook:hover {
+    background-color: #1877f2; /* Cambia el fondo al pasar el mouse */
+    color: #fff; /* Cambia el color del texto al pasar el mouse */
+}
+
+.twitter:hover {
+    background-color: #1da1f2; /* Cambia el fondo al pasar el mouse */
+    color: #fff; /* Cambia el color del texto al pasar el mouse */
+}
+
+.instagram:hover {
+    background-color: #e4405f; /* Cambia el fondo al pasar el mouse */
+    color: #fff; /* Cambia el color del texto al pasar el mouse */
+}
+
+/* Media Query para pantallas pequeñas (por ejemplo, dispositivos móviles) */
+@media screen and (max-width: 768px) {
+    .containers {
+        flex-direction: column; /* Cambia el diseño a una columna única en dispositivos móviles */
+    }
+
+    .contact,
+    .subscribe,
+    .social {
+        width: 100%; /* Ocupa todo el ancho disponible en dispositivos móviles */
+    }
+}
+
+.imagen-producto {
+    width: 100%;
+    max-height: 200px; /* Establece la altura máxima deseada */
+    object-fit: contain; /* Mantiene la relación de aspecto y recorta la imagen si es necesario */
+}
