CAMBIO RUTA IMAGENES Y LOGO

--- a/FRONT/css/landing.css
+++ b/FRONT/css/landing.css
@@ -123,7 +123,7 @@ nav a:active {
 
 
 .taza1 {
-    background-image: url("IMAGENES/taza\ 2.jpg");
+    background-image: url("/FRONT/img/img_landing/taza\ 2.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -134,7 +134,7 @@ nav a:active {
 }
 
 .remera1 {
-    background-image: url("IMAGENES/remera\ 2.jpg");
+    background-image: url("/FRONT/img/img_landing/remera\ 2.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -145,7 +145,7 @@ nav a:active {
 }
 
 .libreta {
-    background-image: url("IMAGENES/reloj.jpg");
+    background-image: url("/FRONT/img/img_landing/reloj.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -156,7 +156,7 @@ nav a:active {
 }
 
 .bolso1 {
-    background-image: url("IMAGENES/bolso\ 1.jpg");
+    background-image: url("/FRONT/img/img_landing/bolso\ 1.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
