--- a/FRONT/css/landing.css
+++ b/FRONT/css/landing.css
@@ -260,3 +260,157 @@ nav a:active {
     margin-bottom: 20px; 
 }
 
+@media screen and (max-width: 768px) {
+    
+    .texto1 {
+      flex-direction: column; 
+      font-size: 80%; 
+    }
+
+    .Opiniones {
+      flex-direction: column; 
+      margin: 30px; 
+      width: 100%;
+      align-items: center;
+      margin-left: 0%;
+    }
+
+    .OtraClase {
+        margin-top: 10px;
+    }
+
+    .texto2 {
+      width: 80%; 
+      margin-bottom: 20px; 
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .taza1, .remera1, .libreta, .bolso1 {
+        width: 80%;
+        height: 100%;
+        padding: 20px 0 70% 0;
+        margin: 10px;
+    }
+}
+
+
+
+footer {
+    background-color: #671E1E;
+    color: #fff; 
+    padding: 20px 0;
+    text-align: center;
+}
+
+.container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+} 
+
+
+.contact,
+.subscribe,
+.social {
+    flex: 1;
+    padding: 10px;
+}
+
+.contact h3,
+.subscribe h3,
+.social h3 {
+    font-size: 20px;
+    margin-bottom: 10px;
+}
+
+.contact ul,
+.subscribe form,
+.social-icons {
+    list-style: none;
+    padding: 0;
+}
+
+.contact ul li,
+.subscribe form input,
+.subscribe form button {
+    margin-bottom: 10px;
+}
+
+.subscribe input[type="email"] {
+    width: 100%;
+    padding: 10px;
+    border: none;
+    border-radius: 4px;
+    margin-right: 10px;
+}
+
+.subscribe button {
+    background-color: #fff;
+    color: black;
+    border: none;
+    border-radius: 4px;
+    padding: 10px 20px;
+    cursor: pointer;
+}
+
+.subscribe button:hover {
+    background-color: #952323;
+}
+
+.social {
+    text-align: center;
+}
+
+.social-icons {
+    list-style: none;
+    padding: 0;
+    display: flex;
+    justify-content: center;
+}
+
+.social-link {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    text-decoration: none;
+    margin: 0 20px; 
+    transition: background-color 0.3s, color 0.3s; 
+    padding: 10px; 
+    border-radius: 50%; 
+    width: 50px; 
+    height: 50px;
+    background-color: #fff; 
+    color: #000; 
+    justify-content: center;
+}
+
+.facebook:hover {
+    background-color: #1877f2; 
+    color: #fff; 
+}
+
+.twitter:hover {
+    background-color: #1da1f2; 
+    color: #fff; 
+}
+
+.instagram:hover {
+    background-color: #1da1f2; 
+    color: #fff;
+}
+
+
+@media screen and (max-width: 768px) {
+    
+    .container {
+        flex-direction: column;
+        width: 100%
+    }
+
+    .subscribe {
+        margin: 10px;
+    }
+
+    }
