cambios url productos

--- a/FRONT/css/productos.css
+++ b/FRONT/css/productos.css
@@ -84,7 +84,7 @@ nav a:active {
 main h1 {
     text-align: center;
     margin-top: 100px;
-    font-family: 'Pacifico', cursive;
+    font-family: Arial, sans-serif;
     font-size: 48px;
     font-weight: 500;
     color: #fff;
