--- a/FRONT/css/landing.css
+++ b/FRONT/css/landing.css
@@ -413,3 +413,233 @@ footer {
     }
 
     }
+
+/*Empieza el model o ventana emergente*/
+#myModal {
+    display: none; /* Ocultar inicialmente */
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    transition: all 1s ease;
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.7); /* Fondo oscuro */
+    padding-top: 40px;
+    backdrop-filter: blur(3px);
+    
+}
+
+.modal-content {
+    transition: all 1s ease;
+    margin: 5% auto;
+    padding: 0px;
+    width: 300%;
+    max-width: 700px;
+    border-radius: 10px;
+}
+
+.close:hover,
+.close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+
+.container-form {
+    transition: all 1s ease;
+    display: flex;
+    border-radius: 20px;
+    box-shadow:  0 5px 7px rgba(0, 0, 0, .1);
+    z-index: 1;
+    height: 500px;
+    max-width: 900px;
+     /*para que el formulario aparezca desde arriba con una transicion */
+    margin: 10px;
+    border: solid thin ;
+    
+}
+
+.information{
+    width: 40%;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    background-color: #b6bfe9; /* Color de fondo del cuadrado */
+    
+    border-top-left-radius: 20px;
+    border-bottom-left-radius: 20px;
+    
+
+}
+
+.info-childs{
+    width: 100%;
+   
+
+}
+
+.info-childs h2{
+    font-size: 2.5rem;
+}
+
+.info-childs p{
+    margin: 15px 0;
+    color: #555;
+}
+
+.info-childs input {
+    background-color: transparent;
+    outline: none;
+    border: solid 2px #9191bd;
+    border-radius: 20px;
+    padding: 10px 20px;
+    color: #9191bd;
+    cursor: pointer;
+    transition: background-color .3s ease; /*efecto cuando pasas el mouse sobre el input*/
+}
+
+.info-childs input:hover{
+    background-color: #9191bd;
+    border: none;
+    color: #fff;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, .1);
+}
+
+.form-information{
+    display:flex;
+    align-items: center;
+    justify-content: center;
+    width:  60%;
+    text-align: center;
+    background-color: #f8f8f8;
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
+    
+}
+.form-information-childs {
+    padding: 0 30px;
+}  
+
+.form-information-childs h2{
+    color: #333;
+    font-size: 2rem;
+}
+
+.form-information-childs p{
+    color:#555;
+}
+
+.icons{
+    margin: 15px 0;
+}
+.icons i{
+    border-radius: 50%;
+     padding: 15px;
+     cursor:pointer;
+     margin: 0 10px;
+     color: #9191bd;
+     transition: background-color 0.3s ease;
+     box-shadow: 0 2px 5px rgba(0, 0, 0, .1);
+     border: solid thin #9191bd;
+ }    
+ 
+ .icons i:hover{
+     background-color: #c7c7f3;
+     color:#fff
+ }
+
+ .form-information label input {
+    width:100%;
+    padding: 10px;
+    background-color: #fff;
+    border:none;
+    outline: none;
+    border-radius: 20px;
+    color: #333;
+}
+
+.form-information label i{
+    color: #a7a7a7;
+}
+
+.form-information input[type="submit"] {
+    background-color: #9191bd;
+    color: #fff;
+    border-radius: 20px;
+    border: none;
+    padding: 10px 15px;
+    cursor: pointer;
+    margin-top: 10;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, .1); 
+}
+
+.form-information input[type="submit"]:hover {
+    background-color: #7a7a9a;
+
+}
+ 
+ 
+ .form-information  label {
+     display: flex;
+     align-items: center;
+     margin-top: 5px;
+     margin-bottom: 15px;
+     border-radius: 20px;
+     padding: 0 20px;
+     box-shadow: 0 2px 5px rgba(0, 0, 0, .1); 
+ }
+
+ .form-information label i{
+    color: #a7a7a7;
+}
+
+
+
+.hide {
+    position: absolute;
+    transform: translateY(-150%);
+}
+
+/*responsive*/
+@media screen and (max-width: 750px) {
+    #myModal {
+        font-size: 12px;
+
+}
+
+}
+@media screen and (max-width: 580px) {
+    #myModal {
+        font-size: 10px;
+    }
+    .modal-content {
+        transition: all 1s ease;
+        margin: 5% auto;
+        padding: 0px;
+        width: 90%;
+        max-width: 700px;
+        border-radius: 10px;
+    }
+    .container-form {
+        height: auto;
+        flex-direction: column;
+    }
+    .information{
+        width: 100%;
+        padding:20px;
+        border-top-left-radius: 20px;
+        border-top-right-radius: 20px;
+        border-bottom-left-radius: 0px;
+        border-bottom-right-radius: 0px;
+    }
+   
+    .form-information{
+        width: 100%;
+        padding: 20px;
+        border-bottom-left-radius: 20px;
+        border-top-right-radius: 0;
+    }
+}
