--- a/FRONT/css/login.css
+++ b/FRONT/css/login.css
@@ -123,7 +123,144 @@ nav a:active {
     transition: all 1s ease; /*para que el formulario aparezca desde arriba con una transicion */
     margin: 10px;
     border: solid thin ;
+}    
+
+.information{
+    width: 40%;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    background-color: #b6bfe9; /* Color de fondo del cuadrado */
     
+    border-top-left-radius: 20px;
+    border-bottom-left-radius: 20px;
+    
+
+}
+
+.info-childs{
+    width: 100%;
+   
+
+}
+
+.info-childs h2{
+    font-size: 2.5rem;
+}
+
+.info-childs p{
+    margin: 15px 0;
+    color: #555;
+}
+
+.info-childs input {
+    background-color: transparent;
+    outline: none;
+    border: solid 2px #9191bd;
+    border-radius: 20px;
+    padding: 10px 20px;
+    color: #9191bd;
+    cursor: pointer;
+    transition: background-color .3s ease; /*efecto cuando pasas el mouse sobre el input*/
+}
+
+.info-childs input:hover{
+    background-color: #9191bd;
+    border: none;
+    color: #fff;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, .1);
+}
+
+.form-information{
+    display:flex;
+    align-items: center;
+    justify-content: center;
+    width:  60%;
+    text-align: center;
+    background-color: #f8f8f8;
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
+    
+}
+.form-information-childs {
+    padding: 0 30px;
+}  
+
+.form-information-childs h2{
+    color: #333;
+    font-size: 2rem;
+}
+
+.form-information-childs p{
+    color:#555;
+}
+
+.icons{
+    margin: 15px 0;
+}
+
+.icons i{
+   border-radius: 50%;
+    padding: 15px;
+    cursor:pointer;
+    margin: 0 10px;
+    color: #9191bd;
+    transition: background-color 0.3s ease;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, .1);
+    border: solid thin #9191bd;
+}    
+
+.icons i:hover{
+    background-color: #c7c7f3;
+    color:#fff
+}
+
+
+.form-information  label {
+    display: flex;
+    align-items: center;
+    margin-top: 5px;
+    margin-bottom: 15px;
+    border-radius: 20px;
+    padding: 0 20px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, .1); 
+}
+
+.form-information label input {
+    width:100%;
+    padding: 10px;
+    background-color: #fff;
+    border:none;
+    outline: none;
+    border-radius: 20px;
+    color: #333;
+}
+
+.form-information label i{
+    color: #a7a7a7;
+}
+
+.form-information input[type="submit"] {
+    background-color: #9191bd;
+    color: #fff;
+    border-radius: 20px;
+    border: none;
+    padding: 10px 15px;
+    cursor: pointer;
+    margin-top: 10;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, .1); 
+}
+
+.form-information input[type="submit"]:hover {
+    background-color: #7a7a9a;
+
+}
+
+.hide {
+    position: absolute;
+    transform: translateY(-300%);
+}
+
 /*kiara*/
 .social-link {
     display: flex;
@@ -168,3 +305,4 @@ nav a:active {
     .subscribe {
         margin: 10px;
     }
+}
