correcion de direccion en el href en style y el javascrip del login

--- a/FRONT/css/login.css
+++ b/FRONT/css/login.css
@@ -6,7 +6,7 @@
 }
 
 body {background-size: cover;
-    background-image: url(./img/img_login/ropa-fondo-2.jpg);
+    background-image: url(../img/img_login/ropa-fondo-2.jpg);
     backdrop-filter: blur(3px);
 }
 
