Correccion en urls de imagenes landing.css. agregado de validaciones html faltantes. Se agrega usuario y contraseña accesibles en el login

--- a/FRONT/css/landing.css
+++ b/FRONT/css/landing.css
@@ -122,7 +122,7 @@ nav a:active {
 
 
 .taza1 {
-    background-image: url("/FRONT/img/img_landing/taza\ 2.jpg");
+    background-image: url("../img/img_landing/taza\ 2.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -133,7 +133,7 @@ nav a:active {
 }
 
 .remera1 {
-    background-image: url("/FRONT/img/img_landing/remera\ 2.jpg");
+    background-image: url("../img/img_landing/remera\ 2.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -144,7 +144,7 @@ nav a:active {
 }
 
 .libreta {
-    background-image: url("/FRONT/img/img_landing/reloj.jpg");
+    background-image: url("../img/img_landing/reloj.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -155,7 +155,7 @@ nav a:active {
 }
 
 .bolso1 {
-    background-image: url("/FRONT/img/img_landing/bolso\ 1.jpg");
+    background-image: url("../img/img_landing/bolso\ 1.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
